# luacmake

./: .gitmodules  template.manifest
package/lua-bytebuffer/: manifest
package/lua-clang/: manifest
package/lua-fs/: manifest
package/lua-json5/: CMakeLists.txt  manifest
package/lua-lfs/: manifest
package/lua-openssl/: manifest
package/lua-openxlsx/: manifest
package/lua-pbc/: manifest
package/lua-pugixml/: manifest
